<resources>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="title_activity_language">Launguage</string>
    <string name="language_name">English</string>

    <string name="fix_now">FIX NOW</string>
    <string name="optimize">OPTIMIZE</string>

    //
    <string name="fast_charging">Fast Charge</string>
    <string name="full_charging">Full Charge</string>
    <string name="trickle_charging">Trickle Charge</string>
    <string name="bd_charge_history">Charge History</string>
    <string name="title_app_manager">App Manager</string>
    <string name="setting_nav">Settings</string>
    <string name="name_remove_ads" translatable="false">Remove Ads</string>

    //Trash Cleaner
    <string name="clean_description" translatable="false">Clean unnecessary files to save
        spaces</string>
    <string name="trash_clean" translatable="false">Clean</string>
    //Phone Boost
    <string name="boost_description" translatable="false">Phone is slow? Too many apps
        running in background</string>
    <string name="phone_boost" translatable="false">Boost</string>
    //Phone Cooler
    <string name="cool_description" translatable="false">Phone is hot? Cool down your phone
    now to extend phone life</string>
    <string name="phone_cooler" translatable="false">Cool</string>
    //Charge History
    <string name="history_description" translatable="false">Phone is slow? Too many apps
        running in background</string>
    <string name="charge_history" translatable="false">Charge</string>
    //App Manager
    <string name="manager_description" translatable="false">Phone is hot? Cool down your phone
    now to extend phone life</string>
    <string name="manager" translatable="false">Manage</string>
    //Settings
    <string name="settings_description" translatable="false">Phone is hot? Cool down your phone
    now to extend phone life</string>
    <string name="settings" translatable="false">Manage</string>
    //Remove Ads
    <string name="remove_description" translatable="false">Phone is hot? Cool down your phone
    now to extend phone life</string>
    <string name="remove_ads" translatable="false">Remove</string>



    //
    <string name="temperature">Temperature</string>
    <string name="voltage">Voltage</string>
    <string name="capacity">Capacity</string>
    <string name="time_left">Time left</string>
    <string name="battery">Battery</string>
    //

    <string name="noti_battery_charging_timer_left">Charging left</string>
    <string name="celsius" translatable="false">°C</string>
    <string name="fahrenheit" translatable="false">°F</string>

    <string name="time_left_pin" formatted="false" translatable="false"><Data><![CDATA[<big>%d</big>h <big>%d</big>min]]> </Data></string>

    <string name="title_optimize">Battery Optimization</string>

    <string name="minutes" translatable="false">%d minute(s)</string>
    <string name="seconds">%d seconds</string>

    <string name="uninstall">Uninstall</string>
    <string name="system_app">System App</string>
    <string name="user_app">User App</string>
    <string name="app_manager">App Manager</string>


    <string name="done">DONE</string>

    //junk
    <string name="pc_ram_free_able">Freeable</string>
    <string name="percent_none" translatable="false">%</string>
    <string name="total_found">Total found: %s</string>
    <string name="no_junk">No junk file found</string>
    <string name="system_cache">System Cache</string>
    <string name="downloader_files">Downloaded Files</string>
    <string name="large_files">Large Files</string>
    <string name="obsolete_apk">Useless APKs</string>

    //Cap quyen
    <string name="setting_permission_request_title">Allow write system settings</string>
    <string name="setting_permission_request_summary">You need turn on permission to use this funtion</string>

    <string name="screen_brightness">Brightness</string>
    <string name="auto">Auto</string>
    <string name="wifi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="start_at">Start time</string>
    <string name="stop_at">End time</string>
    <string name="enabled">Enable</string>
    <string name="super_saving">Prolong</string>
    <string name="normal">General</string>
    <string name="custom">Sleep</string>

    //Optimize
    <string name="sm_edge_device_optimized">Great! Solved the power problem.</string>
    <string name="ram_boost_title">Phone Boost</string>
    <string name="sm_ram_detail">To improve performance, free up memory by stopping background apps.</string>
    <string name="op_boost">Boost</string>
    <string name="op_storage_des">Clear more storage space by deleting unnecessary data, such as cached, residual, and advertisement files</string>
    <string name="op_clean">Clean</string>
    <string name="op_cool_down_tip">Cools down device temperature to save battey life</string>

    //
    <string name="bd_charge_duration">Charge duration</string>

    <string name="bd_charge_record_healthy">Healthy</string>
    <string name="bd_charge_record_normal">Normal</string>
    <string name="bd_charge_record_overcharging">Overcharged</string>
    <string name="bd_charger_type">Charger type</string>
    <string name="go_since_the_last_full_charge">Since last full charge</string>
    <string name="du_no_charger_record">No record</string>
    <string name="go_last_3_days">LAST 3 DAYS CHARGE RECORD</string>
    <string name="go_last_charge_record">LAST CHARGE RECORD</string>
    <string name="go_charge_quantity">Charge quantity</string>
    <string name="title_activity_charge_history">Charge History</string>

    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_fast_charge">Fast Charge</string>

    //Setting
    <string name="kill_app_screen_off">Auto Kill Apps</string>
    <string name="kill_app_screen_off_des">Clean unused background apps when the screen is locked</string>
    <string name="app_white_list">App ignore list</string>
    <string name="app_white_list_des">Ignore list for memory boost</string>
    <string name="battery_title">BATTERY SAVER</string>
    <string name="general_title">General</string>

    //Fast charger
    <string name="charging_completed">Charging complete</string>
    <string name="fast_charger_boosted">Fast charging boosted</string>
    <string name="auto_sync">Sync</string>
    <string name="title_activity_white_list">App Ignore List</string>
    <string name="remove">REMOVE</string>
    <string name="white_list_add">ADD</string>
    <string name="no_item">No item</string>
    <string name="notification_setting">NOTIFICATION SETTING</string>
    <string name="do_not_disturb">Do not disturb</string>
    <string name="title_activity_do_not_disturb">Do Not Disturb</string>


    //
    <string name="phone_cool_reminder">Phone cool down reminder</string>
    <string name="bg_power_use">Background power use reminder</string>
    <string name="low_power_reminder">Low Power Reminder</string>

    //Noti
    <string name="cool_down_title">CPU is a little hot</string>
    <string name="cool_down_title_2">Temperature is too high</string>
    <string name="cool_down_des">Heat culprits detected!</string>
    <string name="cool_down_button">COOL DOWN</string>

    <string name="low_battery">Power too low!</string>
    <string name="low_battery_des">Clearing background apps can save power.</string>
    <string name="saving_now">Saving Now</string>
    <string name="optimize_noti">Optimize</string>


    <string name="boost_title">Running Slow</string>
    <string name="boost_des_2">Device is getting slow. Tap to boost</string>
    <string name="boost_action">Boost</string>


    <string name="battery_full_des">Charging finished. Please unplug the power.</string>

    //
    <string name="bluetooth_is_enabling">Bluetooth is enabled, please wait...</string>


    //
    <string name="ram_result">Boosted</string>
    <string name="boosting">Boosting Memory</string>
    <string name="result_cooler">Excellent! Successfully cooled down.</string>
    <string name="cleaning_junk">Cleaning junk files</string>
    <string name="cleaned">Cleaned: %s</string>

    <string name="battery_exellent">Great!</string>

    <string name="phone_cool_nav">Phone Cooler</string>
    <string name="phone_boost_nav">Phone Boost</string>
    <string name="junk_clean_nav">Trash Cleaner</string>


    <string name="share_nav">Share App</string>
    <string name="feedback_nav">Feed Back</string>
    <string name="moreapp_nav">More App</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="pc_auto_optimizing">Auto Optimizing</string>
    <string name="pc_scanning">Scanning</string>
    <string name="cpugpuram" translatable="false">CPU,GPU,RAM</string>
    <string name="bd_power_issue">Power issue</string>
    <string name="app_name">Super Fast Doctor &amp; Fast Charger</string>
    <string name="power_full">Power is full</string>
    <string name="auto_disable">Disable</string>
    <string name="on_status">ON</string>
    <string name="off_status">OFF</string>
    <string name="boost_title2">Memory is low</string>
    <string name="boost_des">Tap to speed up laggy phone</string>
    <string name="low_power_30">Low battery</string>
    <string name="my_mode">My Mode</string>
    <string name="toast_mode_title">Has switched to</string>
    <string name="charge_des" >Monitor battery charge status and charge overload to prevent (May contain ads)</string>
    <string name="disable_fast_charging_des">You will not be able monitor battery charge status. Sure you want to disable</string>
    <string name="disable_fast_charging">Disable Fast Charging</string>
    <string name="enable_fast_charging">Enable Fast Charging</string>

    <color name="main_darker_color">#ffffffff</color>

    <string name="stringGreen" translatable="false">#7777DC</string>
    <string name="stringGray" translatable="false">#7777DC</string>

    <string name="link_policy" translatable="false">https://sites.google.com/view/amtteam/</string>
    <string name="calculating">calculating...</string>
    <string name="battery_level">Battery Level</string>

</resources>
