<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/activity_battery_actionbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:gravity="center|left">

        <LinearLayout
            android:id="@+id/lr_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onClick">

            <FrameLayout
                android:layout_width="@dimen/_48sdp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/iv_arrow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/ic_navigate_before_white_48dp" />
            </FrameLayout>

            <TextView
                android:id="@+id/activity_charge_tv_title_1"
                style="@style/textHeaderActivity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_activity_setting"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_5sdp">

            <LinearLayout
                android:id="@+id/lr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_rounded"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title2"
                        style="@style/tvTitleStyle"
                        android:text="@string/battery_title" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lrKillApp"
                    style="@style/Ripple"
                    android:clickable="false">

                    <ImageView
                        style="@style/imageStyle"
                        android:src="@drawable/ic_rocket_red" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/sw_wave_mode"
                            style="@style/rowSwitchStyle"
                            android:text="@string/kill_app_screen_off" />

                        <TextView
                            style="@style/rowdetails"
                            android:text="@string/kill_app_screen_off_des" />
                    </LinearLayout>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swKillApp"
                        style="@style/swStyle"
                        app:track="@drawable/track" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lrIngoreList"
                    style="@style/Ripple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/imageStyle"
                        android:src="@drawable/ic_setting_white_list" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/rowSwitchStyle"
                            android:text="@string/app_white_list" />

                        <TextView
                            android:id="@+id/tvNumWave"
                            style="@style/rowdetails"
                            android:text="@string/app_white_list_des" />

                    </LinearLayout>


                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:src="@drawable/ic_next_page" />
                </LinearLayout>

            </LinearLayout>

            <include
                android:id="@+id/native_ads_control_holder"
                layout="@layout/control_native_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_rounded"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/tvTitleStyle"
                        android:text="@string/notification_setting" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lrEnableNotification"
                    style="@style/Ripple"
                    android:clickable="false"
                    android:visibility="gone">

                    <ImageView
                        style="@style/imageStyle"
                        android:src="@drawable/ic_rocket_white"
                        app:tint="@color/colorAccent" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/rowSwitchStyle"
                            android:text="@string/kill_app_screen_off" />

                        <TextView
                            style="@style/rowdetails"
                            android:text="@string/kill_app_screen_off_des" />
                    </LinearLayout>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swEnableNotification"
                        style="@style/swStyle"
                        app:track="@drawable/track" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lrDnd"
                    style="@style/Ripple">

                    <ImageView
                        style="@style/imageStyle"
                        android:src="@drawable/ic_moon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/rowSwitchStyle"
                            android:text="@string/do_not_disturb" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvDNDDes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="20:00-8:00" />

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:src="@drawable/ic_next_page" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lrBoost"
                    style="@style/Ripple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/imageStyle"
                        android:src="@drawable/ic_rocket_yellow" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/rowSwitchStyle"
                            android:text="@string/bg_power_use" />
                    </LinearLayout>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swBoost"
                        style="@style/swStyle"
                        app:track="@drawable/track" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lrCoolDown"
                    style="@style/Ripple">

                    <ImageView
                        style="@style/imageStyle"
                        android:src="@drawable/ic_temperature_normal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/rowSwitchStyle"
                            android:text="@string/phone_cool_reminder" />
                    </LinearLayout>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swCoolDown"
                        style="@style/swStyle"
                        app:track="@drawable/track" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lrLowPower"
                    style="@style/Ripple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/imageStyle"
                        android:src="@drawable/ic_battery_low" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/rowSwitchStyle"
                            android:text="@string/low_power_reminder" />
                    </LinearLayout>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swLowPower"
                        style="@style/swStyle"
                        app:track="@drawable/track" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lrBatteryFull"
                    style="@style/Ripple">

                    <ImageView
                        style="@style/imageStyle"
                        android:src="@drawable/ic_charge_full_reminder" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/rowSwitchStyle"
                            android:text="@string/charging_completed" />
                    </LinearLayout>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swBatteryFull"
                        style="@style/swStyle"
                        app:track="@drawable/track" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lr2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_rounded"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/tvTitleStyle"
                        android:text="@string/general_title" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lrTemperture"
                    style="@style/Ripple">

                    <ImageView
                        style="@style/imageStyle"
                        android:src="@drawable/ic_temperature_normal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/rowSwitchStyle"
                            android:text="@string/temperature" />

                        <TextView
                            android:id="@+id/tvTempertureDes"
                            style="@style/rowdetails"
                            android:text="@string/celsius" />

                    </LinearLayout>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swTemp"
                        style="@style/swStyle"
                        app:track="@drawable/track" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lrLanguage"
                    style="@style/Ripple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/imageStyle"
                        android:src="@drawable/ic_langue" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/rowSwitchStyle"
                            android:text="@string/title_activity_language" />

                        <TextView
                            android:id="@+id/tvLanguageDes"
                            style="@style/rowdetails"
                            android:text="@string/language_name" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:src="@drawable/ic_next_page" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>