<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/notification_bg_light"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/ic_sync_true"
            app:tint="@color/progress_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNotiTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/title_optimize"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tvNotiTitleDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/low_battery_des"
                android:textColor="@color/progress_background"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/notification_layout_show_icon_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toStartOf="@+id/notification_layout_boost_container"
            android:visibility="gone">

            <TextView
                android:id="@+id/btnAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@drawable/install_button_bg_radius"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/low_battery"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/install_button_bg_radius"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/optimize_noti"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>
